--- a/src/components/header/navbar/navbar.module.scss
+++ b/src/components/header/navbar/navbar.module.scss
@@ -1,124 +1,70 @@
 .cps-navbar {
-    --width-icon: 20px;
-    --heigh-icon: 20px;
-    align-items: center;
-    display: flex;
-    height: 64px;
-    margin: 0 auto;
-    padding: 0;
-    width: 100%;
-    color: white;
-}
-
-.btn-menu {
-    display: flex;
-    align-items: center;
-    font-size: 14px;
-    background: hsla(0, 0%, 100%, 0.2);
-    border-radius: 10px;
-    height: 42px;
-    padding: 3px 5px;
-    position: relative;
-    color: white;
-    margin-right: 5px;
-
-    .title {
-        word-break: inherit;
-    }
-
-    svg {
-        width: 20px;
-        height: 20px;
-        margin-right: 5px;
-    }
-
-    p {
-        color: white;
-    }
-
-    img {
-        display: block;
-        width: var(--width-icon);
-        height: var(--heigh-icon);
-        margin-right: 5px;
-    }
-}
-
-.region-layout {
-    display: flex;
-    flex-direction: column;
-
-    .check-price {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-
-        p {
-            margin-right: 5px;
-        }
-    }
-}
-
-.navbar-brand {
-    padding: 8px 12px;
-
-    img {
-        width: 161px;
-        height: 29.9px;
-    }
+  --width-icon: 20px;
+  --heigh-icon: 20px;
+  align-items: center;
+  display: flex;
+  height: 64px;
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+  color: white;
 }
 
 .btn-login {
-    flex-direction: column;
+  flex-direction: column;
+}
+
+.flex-grow {
+  flex-grow: 1;
 }
 
 .search-bar {
-    margin: 0 10px 0 0;
-    width: 300px;
-    height: 34px;
-    background-color: #fff;
-    border-radius: 10px 0 0 10px;
+  margin: 0 10px 0 0;
+  width: 300px;
+  height: 34px;
+  background-color: #fff;
+  border-radius: 10px 0 0 10px;
 
-    form {
-        display: flex;
-        position: relative;
-        width: 100%;
+  form {
+    display: flex;
+    position: relative;
+    width: 100%;
 
-        .find {
-            border: 0;
-            border-radius: 10px 0 0 10px;
-            cursor: pointer;
-            color: #707070;
-            width: 21px;
-        }
-
-        .clear {
-            background: transparent;
-            font-size: 24px;
-            font-weight: 300;
-            height: 26px;
-            line-height: 1;
-            position: absolute;
-            right: 10px;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: 31;
-            border: none;
-        }
-
-        input {
-            border: 0;
-            border-radius: 0 10px 10px 0;
-            padding: 0 5px;
-            height: 34px;
-            outline: none;
-            width: 100%;
-        }
+    .find {
+      border: 0;
+      border-radius: 10px 0 0 10px;
+      cursor: pointer;
+      color: #707070;
+      width: 21px;
     }
+
+    .clear {
+      background: transparent;
+      font-size: 24px;
+      font-weight: 300;
+      height: 26px;
+      line-height: 1;
+      position: absolute;
+      right: 10px;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 31;
+      border: none;
+    }
+
+    input {
+      border: 0;
+      border-radius: 0 10px 10px 0;
+      padding: 0 5px;
+      height: 34px;
+      outline: none;
+      width: 100%;
+    }
+  }
 }
 
 .suggest-search-wrapper {
-    min-width: 500px;
-    position: absolute;
-    top: 10px;
+  min-width: 500px;
+  position: absolute;
+  top: 10px;
 }
